# scapin

./: .gitignore  CMakeLists.txt  Doxyfile  Project.toml  README.md
example/: CMakeLists.txt
include/: CMakeLists.txt  config.cmake.in
include/scapin/: _dllexport.hpp  core.hpp  fft_helper.h  fft_helper.hpp  hooke.hpp  ms94.hpp  scapin.hpp
latex/: .gitignore  gollum.tex  scapin.bib  scapin.tex  shift.tex
metadata/: description.txt  url.txt
python/: CMakeLists.txt  setup.py
python/notebooks/: convergence.ipynb
python/pyscapin/: CMakeLists.txt  __init__.py  demo.py  hooke.cpp
python/scapin/: hooke.cpp  ms94.cpp
python/tests/: test_hooke.py
sandbox/: Project.toml  README.md  Scapin.jl  test_hooke.jl
sandbox/Scapin/: LICENSE  Manifest.toml  Project.toml
sandbox/Scapin/src/: Scapin.jl
sandbox/Scapin/test/: runtests.jl
sandbox/fe_ref_green/: fe_ref_green.jl
sandbox/julia/src/: Scapin.jl
sandbox/julia/test/: runtests.jl
sandbox/src/: Scapin.jl
sandbox/test/: runtest.jl  runtests.jl
sphinx/: .dir-locals.el  api.rst  conf.py  index.rst  nomenclature.rst  theory.rst
src/: CMakeLists.txt  Scapin.jl  cartesian_indices.cpp  fft_helper.c  fft_helper.cpp  gollum.c  gollum.h  mandel.c  mandel.h  meson.build  scapin.c  scapin.cpp  scapin.h  scapin_demo.cpp  test_gollum.c  test_mandel.c  test_scapin.c
test/: runtests.jl
tests/: CMakeLists.txt  test_fft_helper.c  test_fft_helper.cpp  test_scapin.c  test_scapin.cpp
